GPencil: Interpolate wrong stroke order #86975

Closed
opened 2021-03-27 12:00:32 +01:00 by Dima · 10 comments

System Information
Operating system: Windows 10
Graphics card: Radeon RX 590

Blender Version
Broken: (2.93.0 Alpha, 9b87d3f029, master, 2021-03-26)
Worked: (2.92)

Short description of error
If I draw two shapes on the same layer, one on top of the other, then when I use the Interpolate Sequence function, the bottom shape comes out in front. In Blender 2.92, this function works correctly!

Exact steps for others to reproduce the error
blender file InterpSeq_Issue.blend
1.PNG

**System Information** Operating system: Windows 10 Graphics card: Radeon RX 590 **Blender Version** Broken: (2.93.0 Alpha, 9b87d3f02962, master, 2021-03-26) Worked: (2.92) **Short description of error** If I draw two shapes on the same layer, one on top of the other, then when I use the Interpolate Sequence function, the bottom shape comes out in front. In Blender 2.92, this function works correctly! **Exact steps for others to reproduce the error** blender file [InterpSeq_Issue.blend](https://archive.blender.org/developer/F9911635/InterpSeq_Issue.blend) ![1.PNG](https://archive.blender.org/developer/F9911636/1.PNG)
Author

Added subscriber: @scorpman

Added subscriber: @scorpman
Antonio Vazquez self-assigned this 2021-03-27 12:26:53 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez changed title from Grease Pencil: Interpolate Sequence issue to GPencil: Interpolate Sequence issue when strokes are not selected 2021-03-27 12:50:09 +01:00

This issue was referenced by dc873c4a7b

This issue was referenced by dc873c4a7be494a6a3d8b4481ca6a1c096d361cd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

There is one important point about interpolation. If you don't select any stroke, the order must be the same (this was the bug), but if you select the strokes, then you need select in the right order to get the final result that you expect. When using selection to define pairs of strokes, this selection order defines the final order of the strokes.

There is one important point about interpolation. If you don't select any stroke, the order must be the same (this was the bug), but if you select the strokes, then you need select in the right order to get the final result that you expect. When using selection to define pairs of strokes, this selection order defines the final order of the strokes.
Author

This comment was removed by @scorpman

*This comment was removed by @scorpman*

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Reopened because the bug still exists.

Reopened because the bug still exists.

This issue was referenced by f99e703df3

This issue was referenced by f99e703df3ae91cae444acca466fc0482195626b
Antonio Vazquez changed title from GPencil: Interpolate Sequence issue when strokes are not selected to GPencil: Interpolate wrong stroke order 2021-03-29 16:06:23 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86975
No description provided.