Fix T86975: GPencil interpolate sequence error when strokes are not selected

If the selection order is not used, need to put the strokes in inverse order because the Hash Iter returns the strokes in inverse order.